--- a/node/jichukaifa/web/522/weibo/views/layout.jade
+++ b/node/jichukaifa/web/522/weibo/views/layout.jade
@@ -5,7 +5,7 @@ html
         = title 
         | Miroblog
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-    style(type='text/css')
+    style.(type='text/css')
         body {
             padding-top: 60px;
             padding-bottom: 40px;
@@ -24,10 +24,14 @@ html
                     ul.nav
                         li.active
                             a(href='/') 首页
-                        li
-                            a(href='/login') 登入
-                        li
-                            a(href='/reg') 注册
+                        if !user
+                            li
+                                a(href='/login') 登入
+                            li
+                                a(href='/reg') 注册
+                        else
+                            li
+                                a(href='/logout') 登出
     div#container.container
         block content
         hr
