--- a/node/jichukaifa/web/522/weibo/views/index.jade
+++ b/node/jichukaifa/web/522/weibo/views/index.jade
@@ -1,6 +1,10 @@
 extends layout
 
 block content
+    if success
+        div.alert.alert-success= success
+    if error
+        div.alert.alert-error= error
     div.hero-unit
         h1 欢迎来到Microblog
         p Microblog 是一个基于 Node.js的微博系统
