--- a/node/jichukaifa/web/522/weibo/views/layout.jade
+++ b/node/jichukaifa/web/522/weibo/views/layout.jade
@@ -5,12 +5,12 @@ html
             = title 
             | Miroblog
         link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-        style.(type='text/css')
+        style(type='text/css').
             body {
                 padding-top: 60px;
                 padding-bottom: 40px;
             }
-        link(href='stylesheets/bootstrap-responsive.css' rel='stylesheet')
+        link(href='/stylesheets/bootstrap-responsive.css' rel='stylesheet')
     body
         div.navbar.navbar-fixed-top
             div.navbar-inner
